Corrected image stretch issue in homepage and product results page

--- a/src/app/content/homepage/products/products.component.css
+++ b/src/app/content/homepage/products/products.component.css
@@ -1,8 +1,10 @@
-img
+.img-container
 {
-  object-fit: cover;
+  background-size: cover;
+  background-position: center;
   width: 95%;
   height: 120px;
+  margin: auto;
 }
 
 .in-line {
